slx-319: incluidos os endpoints send_email e send_to_esignature no v2 e na documentacao
